# rag

./: .gitignore  README.md  app.py  pyproject.toml  query.json  query_payload.json  requirements.txt  streamlit_app.py
data/test_files/: sample.txt  sample2.txt
notebook/: document.ipynb
scripts/: ingest_cli.py
src/: config.py  embedding.py  embeddings.py  ingestion.py  logger.py  logging_config.py  rag_pipeline.py  search.py  vector_store.py
